fixed the gap in the header and hero

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,7 +623,7 @@ section {
 
 /*homepage hero */
 .hero {
-    margin: 20px;
+    margin: 0px;
     background-color: white;
     font-size: 20px;
     color: blue;
